--- a/index.html
+++ b/index.html
@@ -25,36 +25,36 @@
       align-items: center;
       padding-top: 40px;
       padding-bottom: 40px;
-      background-color: #f5f5f5;
+      background-image: -moz-element(cover_back.png);
     }
 
-    .signin {
-      width: 100%;
-      max-width: 330px;
-      padding: 15px;
+    .login-box {
+      border-image-width: 50%;
+      width: 70%;
+      max-width: 1200px;
+      padding: 2px;
       margin: auto;
     }
   </style>
 </head>
 
 
-  <body class="text-center">
+  <body>
   <div class="login-box">
     <img src="img/login.png">
     <h1>Iniciar sesión</h1>
     <form>
       <!--username-->
-      <label for="username">Usuario</label>
+     <br> <label for="username">Usuario</label>
       <input type="text" placeholder="Usuario">
 
       <!--password-->
-      <label for="password">Contraseña</label>
+     <br> <label for="password">Contraseña</label>
       <input type="password" placeholder="Contraseña">
-
       <input type="submit" value="Ingresar">
 
-      <a href="#">Olvidé mi contraseña</a>
-      <a href="#">Quiero registrarme</a>
+     <br> <a href="#">Olvidé mi contraseña</a>
+     <br> <a href="#">Quiero registrarme</a>
     </form>
   </div>
   <script src="js/init.js"></script>
