--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     <form>
       <!--username-->
      <br> <label for="username">Usuario</label>
-      <input type="text" placeholder="Usuario">
+      <input id= "username" type="text" placeholder="Usuario">
 
       <!--password-->
      <br> <label for="password">Contraseña</label>
-      <input type="password" placeholder="Contraseña">
-      <input type="submit" value="Ingresar">
+      <input id= "password" type="password" placeholder="Contraseña">
+      <input id= "submit" type="submit" value="Ingresar">
 
      <br> <a href="#">Olvidé mi contraseña</a>
      <br> <a href="#">Quiero registrarme</a>
