--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="login-box">
     <img src="img/login.png">
     <h1>Iniciar sesión</h1>
-    <form>
+    <div>
       <!--username-->
      <br> <label for="username">Usuario</label>
       <input id= "username" type="text" placeholder="Usuario">
@@ -51,11 +51,11 @@
       <!--password-->
      <br> <label for="password">Contraseña</label>
       <input id= "password" type="password" placeholder="Contraseña">
-      <input id= "submit" type="submit" value="Ingresar">
+      <button id= "button">Ingresar></button>
 
      <br> <a href="#">Olvidé mi contraseña</a>
      <br> <a href="#">Quiero registrarme</a>
-    </form>
+    </div>
   </div>
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
