--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       align-items: center;
       padding-top: 40px;
       padding-bottom: 40px;
-      background-image: -moz-element(cover_back.png);
+      background-color: deeppink);
     }
 
     .login-box {
