--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       align-items: center;
       padding-top: 40px;
       padding-bottom: 40px;
-      background-color: deeppink);
+      background: deeppink;
     }
 
     .login-box {
