--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       max-width: 1200px;
       padding: 2px;
       margin: auto;
-      background-color: deeppink;
+      background-color: rgb(236, 106, 176);
     }
   </style>
 </head>
