--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       align-items: center;
       padding-top: 40px;
       padding-bottom: 40px;
-      background: deeppink;
+      background: rgb(236, 106, 176);
     }
 
     .login-box {
