--- a/principal.html
+++ b/principal.html
@@ -21,8 +21,21 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      </div>
+        <a id="nombre-usuario" class="py-2 d-none d-md-inline-block text-light"></a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class= "collapse navbar-collapse" id="nav">
+              <div class="navbar-nav">
+                <div id="usernav"></div>
+                <a href="#" id="close" class="nav-item nav-link active">Cerrar sesión</a>
+              </div>
+              </div>
+      
+          </nav>
     </nav>
+    
     <main role="main"> <!--representa el contenido principal del <body> de un documento o aplicación. El área principal del contenido consiste en el contenido que está directamente relacionado, o se expande sobre el tema central de un documento o la funcionalidad central de una aplicación.-->
       <section class="jumbotron text-center"> <!--sección principal-->
         <div class="m-5">
@@ -105,5 +118,6 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
+    <script src="js/nombre-usuario.js"></script>
   </body>
 </html>
