--- a/categories.html
+++ b/categories.html
@@ -21,9 +21,17 @@
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span id="username" ></span>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="username">
+          <a class="dropdown-item" href="cart.html">Mi carrito</a>
+          <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+          <a class="dropdown-item" onclick="localStorage.clear()"; href="index.html">Cerrar sesión</a>
+        </div>
       </div>
     </nav>
+  
     <main role="main" class="pb-5">
         <div class="text-center p-4">
             <h2>Categorías</h2>
@@ -87,5 +95,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="js/categories.js"></script>
+    <script src="js/nombre-usuario.js"></script>
   </body>
 </html>
