--- a/principal.html
+++ b/principal.html
@@ -14,26 +14,21 @@
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="site-header sticky-top py-1 bg-dark"> <!--representa una sección de una página cuyo propósito es proporcionar enlaces de navegación, ya sea dentro del documento actual o a otros documentos. Ejemplos comunes de secciones de navegación son menús, tablas de contenido e índices.-->
+    <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
         <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-        <a id="nombre-usuario" class="py-2 d-none d-md-inline-block text-light"></a>
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class= "collapse navbar-collapse" id="nav">
-              <div class="navbar-nav">
-                <div id="usernav"></div>
-                <a href="#" id="close" class="nav-item nav-link active">Cerrar sesión</a>
-              </div>
-              </div>
-      
-          </nav>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span id="username" ></span>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="username">
+          <a class="dropdown-item" href="cart.html">Mi carrito</a>
+          <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+          <a class="dropdown-item" onclick="localStorage.clear()"; href="index.html">Cerrar sesión</a>
+        </div>
+      </div>
     </nav>
     
     <main role="main"> <!--representa el contenido principal del <body> de un documento o aplicación. El área principal del contenido consiste en el contenido que está directamente relacionado, o se expande sobre el tema central de un documento o la funcionalidad central de una aplicación.-->
