--- a/product-info.html
+++ b/product-info.html
@@ -102,14 +102,14 @@
           </div>
         </dd>
 
-        <dt>Productos relacionados</dt>
+        <dt>Ver productos relacionados</dt>
         <dd>
           <div class="row text-center text-lg-left pt-2" id="relatedProducts">
           </div>
         </dd>
 
       </dl>
-      <!--<a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Ver productos relacionados</a>-->
+      
     </div>
   </main>
 <div>
@@ -126,7 +126,7 @@
 </div2>
 
 
-  <p><dt>Déjenos su comentario</dt></p>
+  <p><dt>Déjenos su opinión</dt></p>
   Valoración: <span id="valor"></span>
   <div class="puntuacion">
     <input id="radio1" type="radio" name="estrellas" value="5" onclick="document.getElementById('valor').innerHTML='5'"><!--
@@ -143,7 +143,7 @@
   </div><br>
   
 
-<br> <p> Usuario: <input type="text" name="Usuario" id="userComentario" size="25"></p>
+
 <br> <p> Comentario: <textarea name= "text" id="descripcionComentario" rows="3" cols="50"></textarea> </p>
 <br> <input type="submit" value="Enviar" onclick="guardar()"> 
 </div>
