--- a/products.html
+++ b/products.html
@@ -13,6 +13,13 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <style>
+      span{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-weight: 400;
+        color:  #e83e8c;
+    }
+    </style>
   </head>
   <body>
     
