--- a/my-profile.html
+++ b/my-profile.html
@@ -27,6 +27,11 @@
         font-size: 3.5rem;
       }
     }
+    span{
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-weight: 400;
+      color:  #e83e8c;
+  }
   </style>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -40,7 +45,14 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span id="username" ></span>
+      </button>
+      <div class="dropdown-menu" aria-labelledby="username">
+        <a class="dropdown-item" href="cart.html">Mi carrito</a>
+        <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+        <a class="dropdown-item" onclick="localStorage.clear()"; href="index.html">Cerrar sesión</a>
+      </div>
     </div>
   </nav>
   <div class="container p-5">
@@ -76,6 +88,7 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/my-profile.js"></script>
+  <script src="js/nombre-usuario.js"></script>
 </body>
 
 </html>
